<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_circle"
            android:contentDescription="Settings" />


    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/burakbinmunir_profile_pic_round"
                />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts_text"
                        android:textSize="10sp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="@string/followers_text"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followings_text"
                        android:textSize="10sp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burak_bin_munir"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatever_not_interested"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_profile"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        >

        <ImageView

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@mipmap/grid_foreground"
            android:layout_weight="1"
            android:background="@color/white"

            />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/three_lines_foreground"
            android:layout_weight="1"
            android:background="@color/white"
            />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/location_foreground"
            android:layout_weight="1"
            android:background="@color/white"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/tag_foreground"
            android:layout_weight="1"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        >

        <GridLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/burakbinmunir_pic6_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/white"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/burakbinmunir_pic1_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/white"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/burakbinmunir_pic2_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/white"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/burakbinmunir_pic3_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/white"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/burakbinmunir_pic4_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/white"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/burakbinmunir_pic5_foreground"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_margin="1dp"
            />

    </GridLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@mipmap/home_foreground"
            android:contentDescription="@string/home" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@mipmap/search_foreground"
            android:contentDescription="@string/search" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@mipmap/camera_foreground"
            android:contentDescription="@string/camera" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@mipmap/heart_foreground"
            android:contentDescription="@string/heart" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@mipmap/user_foreground"
            android:contentDescription="@string/user" />

    </LinearLayout>

</LinearLayout>